# rust-cross-toolchain

./: .clippy.toml  .cspell.json  .git-blame-ignore-revs  .gitignore  .shellcheckrc  Cargo.toml  README.md  platform-support-status-tier3.md  platform-support-status.md
.github/: dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: base.yml  ci.yml
ci/: gen.sh
docker/: .dockerignore  android.Dockerfile  clang-cross.sh  dragonfly.Dockerfile  emscripten.Dockerfile  freebsd.Dockerfile  illumos.Dockerfile  linux-gnu.Dockerfile  linux-gnu.sh  linux-musl.Dockerfile  linux-uclibc.Dockerfile  netbsd.Dockerfile  none.Dockerfile  openbsd.Dockerfile  redox.Dockerfile  solaris.Dockerfile  test-base-target.sh  test-base.sh  vxworks.Dockerfile  wasi.Dockerfile  windows-gnu.Dockerfile  windows-gnu.sh  windows-gnullvm.Dockerfile
docker/base/: .dockerignore  build-binutils.sh  build-docker.sh  common.sh  illumos.Dockerfile  linux-musl-hexagon.Dockerfile  linux-musl.Dockerfile  netbsd.Dockerfile  solaris.Dockerfile  various.Dockerfile  windows-gnu-gcc-mingw-i686.diff  windows-gnu.Dockerfile
docker/build-libunwind/: Cargo.toml
docker/build-libunwind/src/: main.rs
docker/test/: check.sh  entrypoint.sh  test.sh
docker/test-base/: target.sh
docker/test-base/patches/: aarch64-unknown-freebsd-std_detect.diff  compiler_builtins+aarch64_be-unknown-linux-gnu.diff  compiler_builtins+hexagon-unknown-linux-musl.diff  compiler_builtins+m68k-unknown-linux-gnu.diff  hexagon-unknown-linux-musl-libc.diff  libc+armv7-unknown-linux-uclibceabihf.diff  libc+mips-unknown-linux-uclibc.diff  libc+mipsel-unknown-linux-uclibc.diff  libc+mipsisa32r6el-unknown-linux-gnu.diff  libc+powerpc-unknown-linux-musl.diff  libc+x86_64-unknown-dragonfly.diff  powerpc-unknown-openbsd-libc.diff  riscv64gc-unknown-freebsd-libc.diff  riscv64gc-unknown-linux-musl-libc.diff  std+armv6-unknown-netbsd-eabihf.diff  std+armv7-unknown-linux-uclibceabi.diff  std+armv7-unknown-linux-uclibceabihf.diff  std+hexagon-unknown-linux-musl.diff  std+i686-unknown-netbsd.diff  std+m68k-unknown-linux-gnu.diff  std+mipsel-unknown-netbsd.diff  std+powerpc-unknown-netbsd.diff  std+sparc-unknown-linux-gnu.diff
docker/test/fixtures/arm-none/: Cargo.toml  build.rs
docker/test/fixtures/arm-none/src/: main.rs
docker/test/fixtures/cortex-m/: Cargo.toml  build.rs  int_c.c
docker/test/fixtures/cortex-m/src/: main.rs
docker/test/fixtures/cpp/: hello.c  hello.cpp
docker/test/fixtures/no-std-qemu/: Cargo.toml  build.rs  int_c.c  int_cpp.cpp
docker/test/fixtures/no-std-qemu/raspi/: boot.s  kernel.ld
docker/test/fixtures/no-std-qemu/src/: main.rs
docker/test/fixtures/riscv-none/: Cargo.toml  build.rs  memory.x
docker/test/fixtures/riscv-none/src/: main.rs
docker/test/fixtures/rust/: Cargo.toml  build.rs  hello_c.c  hello_cpp.cpp
docker/test/fixtures/rust-cmake/: Cargo.toml  build.rs
docker/test/fixtures/rust-cmake/libdouble/: CMakeLists.txt  double.c
docker/test/fixtures/rust-cmake/src/: main.rs
docker/test/fixtures/rust/libhello_cmake/: CMakeLists.txt  hello_cmake.c
docker/test/fixtures/rust/src/: main.rs
tools/: .tidy-check-license-headers  build-docker.sh  docker-manifest.sh  gen.sh  target-list-generated  target-list-shared.sh  target-list.sh  tidy.sh
tools/ci/: gen.sh
