[package]
name = "no-std-qemu-test"
edition = "2021"

[features]
c = []
cpp = ["c"]
qemu-system = ["semihosting-no-std-test-rt/qemu-system"]
qemu-user = ["semihosting-no-std-test-rt/qemu-user"]

[build-dependencies]
# https://github.com/rust-lang/cc-rs/issues/959
cc = "=1.0.83"

[dependencies]
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
semihosting-no-std-test-rt = { git = "https://github.com/taiki-e/semihosting.git", rev = "80d16c5" }

[target.'cfg(all(target_arch = "arm", target_feature = "mclass"))'.dependencies]
cortex-m-rt = "0.7"

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"
