[package]
name = "no-std-qemu-test"
edition = "2021"

[features]
c = []
cpp = ["c"]
qemu-system = ["semihosting-no-std-test-rt/qemu-system"]
qemu-user = ["semihosting-no-std-test-rt/qemu-user"]

[build-dependencies]
# https://github.com/rust-lang/cc-rs/issues/959
cc = "=1.0.83"

[dependencies]
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
semihosting-no-std-test-rt = { git = "https://github.com/taiki-e/semihosting.git", rev = "3874a1e" }

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
