[package]
name = "riscv-none-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[features]
c = []
cpp = ["c"]

[build-dependencies]
cc = "1"

[dependencies]
# https://github.com/rust-embedded/riscv-rt/pull/99 + https://github.com/rust-embedded/riscv-rt/pull/103
riscv-rt = { git = "https://github.com/taiki-e/riscv-rt.git", branch = "dev" }
