[package]
name = "rust-test"
edition = "2021"

[features]
default = ["cpp"]
cpp = []

[build-dependencies]
# https://github.com/rust-lang/cc-rs/issues/959
cc = "=1.0.86"
# TODO: 0.1.49 fails for android
cmake = "=0.1.48"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"
