[package]
name = "rust-test"
edition = "2021"

[features]
default = ["cpp"]
cpp = []

[build-dependencies]
# https://github.com/rust-lang/cc-rs/issues/959
cc = "=1.0.83"
# TODO: 0.1.49 fails for android
# cmake = "=0.1.48"
cmake = { git = "https://github.com/rust-lang/cmake-rs.git", rev = "00e6b22" } # cmake-rs 0.1.48 + https://github.com/rust-lang/cmake-rs/pull/146

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
